--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,8 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sortablejs": "^1.15.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-tiny-popover": "^7.2.3"
   },
   "scripts": {
     "start": "WATCHPACK_POLLING=true react-scripts start",
