--- a/web/package.json
+++ b/web/package.json
@@ -12,14 +12,14 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sortablejs": "^1.15.0",
-    "web-vitals": "^2.1.4",
-    "react-tiny-popover": "^7.2.3"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "WATCHPACK_POLLING=true react-scripts start",
